Added a link to the history page, that can be used to go back to the page of the corresponding post.

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -954,6 +954,7 @@ history.restoreBtn.enabled      = diese Version wiederherstellen
 history.selection.current       = aktuelle Version ({0} verschiedene Felder)
 history.selection.help          = W\u00E4hlen Sie eine Version um die Unterschiede zu dieser Version anzuzeigen. (W\u00E4hlen Sie vergleichen mit der aktuelle Version um Felder aus der \u00E4lteren Version wiederherzustellen.)
 history.selection.previous      = vorherige Version ({0} verschiedene Felder)
+history.backToPost				= Go to Post
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy_de.png
