--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -958,6 +958,7 @@ history.restoreBtn.enabled      = restore this version
 history.selection.current       = current version ({0} different fields)
 history.selection.help          = Select a revision and see the differences to this revision. (If you select 'current version', you will have an option to restore the current post to this version.)
 history.selection.previous      = previous version ({0} different fields)
+history.backToPost				= Go to Post
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy.png
