PharmacognosyResearchScraper now removes <i>-tags from title

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PharmacognosyResearchScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PharmacognosyResearchScraperUnitURLTest1.bib
@@ -5,7 +5,7 @@ journal = {Phcog Res},
 month = {jul},
 number = {4},
 pages = {172--174},
-title = {Essential Oil Composition of the <i>Dracocephalum moldavica </i>L from Xinjiang in China},
+title = {Essential Oil Composition of the Dracocephalum moldavica L from Xinjiang in China},
 url = {http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6},
 volume = {1},
 year = {2009}
