fixed contact and imprint link

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1127,7 +1127,7 @@ mysearch.option.tag           = tags
 
 name = name
 
-navi.about                       = <a href="/help_en/contact">Contact</a>
+navi.about                       = <a href="/help_en/Contact">Contact</a>
 navi.account                     = account
 navi.admin                       = admin
 navi.admin.fulltextsearch        = full text search 
