--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1122,7 +1122,7 @@ mysearch.option.tag           = Tags
 
 name = Name
 
-navi.about                       = <a href="/help_de/contact">Impressum</a>
+navi.about                       = <a href="/help_de/Impressum">Impressum</a>
 navi.account                     = Account
 navi.admin                       = Administrator
 navi.admin.fulltextsearch        = Volltextsuche
