updated replacement pattern for doi url in AandAScraper updated AandAScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AandAScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AandAScraperUnitURLTest1.bib
@@ -5,7 +5,7 @@
 	month={},
 	pages={L1},
 	title={Nonaxisymmetric modes of MRI in dissipative Keplerian disks},
-	url={http://dx.doi.org/10.1051/0004-6361/201014294},
+	url={https://doi.org/10.1051/0004-6361/201014294},
 	volume=513,
 	year=2010,
 }
