"Post" -> "Eintrag" and cleaned up history link

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -151,7 +151,7 @@ bibtex.actions.openurl.title                 = query your OpenURL server with th
 bibtex.actions.pick.inactive                 = sign in to add or remove posts from your clipboard
 # BibTex actions
 bibtex.actions.pick.title                    = add this publication to your clipboard
-bibtex.actions.posthistory.title             = view history of this post
+bibtex.actions.posthistory.title             = history of this post
 bibtex.actions.private_document.delete       = delete
 bibtex.actions.private_document.description  = documents of this post
 bibtex.actions.private_document.download     = download
@@ -217,7 +217,7 @@ bookmark.actions.delete.title        = delete this bookmark from your repository
 bookmark.actions.edit.title          = edit this bookmark
 bookmark.actions.heading             = actions for all displayed bookmarks:
 bookmark.actions.memento             = archived version of this page
-bookmark.actions.posthistory.title   = view history of this post
+bookmark.actions.posthistory.title   = history of this post
 bookmark.actions.removeMessage.title = remove this bookmark from your inbox
 bookmark.url                         = go to the bookmarked web page
 
