Added additional fields to the post/editPublication dialog,

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -946,6 +946,7 @@ help.search.title            = Search Results
 
 hide = hide
 
+history.backToPost              = Go to Post
 # History page
 history.currentVersion          = This version is identical to the latest(current) version.
 history.firstVersion            = This is the first version and has no previous version.  
@@ -963,7 +964,6 @@ history.restoreBtn.enabled      = restore this version
 history.selection.current       = current version ({0} different fields)
 history.selection.help          = Select a revision and see the differences to this revision. (If you select 'current version', you will have an option to restore the current post to this version.)
 history.selection.previous      = previous version ({0} different fields)
-history.backToPost				= Go to Post
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy.png
@@ -1752,9 +1752,15 @@ post.resource.misc                                      = misc fields
 post.resource.misc.addbutton                            = add new field
 post.resource.misc.checkbox                             = expert view
 post.resource.misc.doi                                  = DOI
+post.resource.misc.eventdate                            = eventdate
+post.resource.misc.eventtitle                           = eventtitle
 post.resource.misc.help                                 = this field can be used to import non-standard fields in addition to the predefined ones. Please use BibTeX compliant syntax, e.g. <tt>fieldName = {fieldValue},</tt>
+post.resource.misc.isbn                                 = ISBN
+post.resource.misc.issn                                 = ISSN
+post.resource.misc.language                             = language
 post.resource.misc.tooltipAdd                           = adds a new line
 post.resource.misc.tooltipRemove                        = remove this line
+post.resource.misc.venue                                = venue
 post.resource.month                                     = month
 post.resource.month.help                                = The month of publication. It can be abbreviated using the first three English letters; many systems then insert the correct localized month name.
 post.resource.myown                                     = I am an author
@@ -2620,6 +2626,8 @@ users.similar      = similar users
 users.similar.for  = {0}''s similar users
 users.similar.your = your similar users
 
+warnings.https = BibSonomy now supports HTTPS. Switch to  <a href="https://www.bibsonomy.org/{0}">HTTPS</a>.
+
 within.last.days = within the last {0} days
 
 wordpress.plugin = WordPress Plugin
@@ -2627,4 +2635,3 @@ wordpress.plugin = WordPress Plugin
 yes = yes
 
 younger = younger
-warnings.https=BibSonomy now supports HTTPS. Switch to  <a href="https://www.bibsonomy.org/{0}">HTTPS</a>.
