--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -943,6 +943,7 @@ help.search.title            = Suchergebnisse
 
 hide = verbergen
 
+history.backToPost              = Go to Post
 history.currentVersion          = Diese Version ist identisch zur aktuellen Version.
 history.firstVersion            = Dies ist die erste Version dieses Eintrages.
 history.historyList.header      = Versionsgeschichte:
@@ -959,7 +960,6 @@ history.restoreBtn.enabled      = diese Version wiederherstellen
 history.selection.current       = aktuelle Version ({0} verschiedene Felder)
 history.selection.help          = W\u00E4hlen Sie eine Version um die Unterschiede zu dieser Version anzuzeigen. (W\u00E4hlen Sie vergleichen mit der aktuelle Version um Felder aus der \u00E4lteren Version wiederherzustellen.)
 history.selection.previous      = vorherige Version ({0} verschiedene Felder)
-history.backToPost				= Go to Post
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy_de.png
@@ -1738,9 +1738,15 @@ post.resource.misc                                      = weitere Felder
 post.resource.misc.addbutton                            = neues Feld hinzuf\u00FCgen
 post.resource.misc.checkbox                             = Expertenmodus
 post.resource.misc.doi                                  = DOI
+post.resource.misc.eventdate                            = Veranstaltungsdatum
+post.resource.misc.eventtitle                           = Veranstaltungstitel
 post.resource.misc.help                                 = In dieses Feld k\u00F6nnen Sie zus\u00E4tzliche Felder in BibTeX-vertr\u00E4glicher Schreibweise eintragen, beispielsweise <tt>Feldname = {Feldwert},</tt>
+post.resource.misc.isbn                                 = ISBN
+post.resource.misc.issn                                 = ISSN
+post.resource.misc.language                             = Sprache
 post.resource.misc.tooltipAdd                           = F\u00FCgt eine neue Zeile hinzu
 post.resource.misc.tooltipRemove                        = Diese Zeile l\u00F6schen
+post.resource.misc.venue                                = Veranstaltungsort
 post.resource.month                                     = Monat
 post.resource.month.help                                = Der Erscheinungsmonat. Er kann durch die drei ersten Buchstaben der englischen Monatsbezeichnung abgek\u00FCrzt werden. Viele Systeme setzen dann den richtig \u00FCbersetzten Monatsnamen ein.
 post.resource.myown                                     = Ich bin (Mit-)Autor
@@ -2607,6 +2613,8 @@ users.similar      = \u00C4hnliche Benutzer
 users.similar.for  = {0}s \u00E4hnliche Benutzer
 users.similar.your = Ihnen \u00E4hnliche Benutzer
 
+warnings.https = BibSonomy unterst\u00FCtzt jetzt HTTPS. Zu <a href="https://www.bibsonomy.org/{0}">HTTPS</a> wechseln.
+
 within.last.days = in den letzten {0} Tagen
 
 wordpress.plugin = WordPress Plugin
@@ -2614,4 +2622,3 @@ wordpress.plugin = WordPress Plugin
 yes = ja
 
 younger = j\u00FCngere
-warnings.https=BibSonomy unterst\u00FCtzt jetzt HTTPS. Zu <a href="https://www.bibsonomy.org/{0}">HTTPS</a> wechseln.
