--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1371,6 +1371,7 @@ person.show.MrevTooltip                           = Weitere Gutachter_innen der 
 person.show.Mths                                  = Betreuer_in
 person.show.Mths.of                               = , Betreuer_in von
 person.show.MthsTooltip                           = Person, die den Doktoranden / die Doktorandin haupts\u00E4chlich betreut hat; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
+person.show.TooltipLockedForm                     = Dieses Feld kann nur editiert werden, wenn Sie diese Person sind und diese beansprucht haben.
 person.show.academicDegree                        = Akademischer Grad
 person.show.addAlternateNameButton                = Alternativen Namen hinzuf\u00FCgen
 person.show.addNameButton                         = Name hinzuf\u00FCgen
