--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1440,7 +1440,7 @@ person.show.personPanelHeader                     = About
 person.show.resourcesPanelHeader                  = Resources
 person.show.role                                  = Role
 person.show.rolePubTab                            = Related Theses
-person.show.saveButton                            = Update
+person.show.saveButton                            = save
 person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
 person.show.thatsMeLabel                          = User
@@ -1449,7 +1449,7 @@ person.show.thesis                                = Theses
 person.sidebar                                    = 
 person.sidebar.linkedUserClaimText                = If you are this person you can claim this page. Please consider that you can only claim one person. 
 person.sidebar.linkedUserClaimedText              = This person has been claimed by a user. 
-person.sidebar.linkedUserDefaultInfoText          = Is that you? Logg in to claim this person. 
+person.sidebar.linkedUserDefaultInfoText          = Is that you? Log-in to claim this person. 
 person.sidebar.linkedUserTitle                    = Claim this person
 person.sidebar.linkedUserUnlinkText               = If you accidentally claimed this person you can revert that. Please be careful, this change is permanent.
 
