--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1427,7 +1427,7 @@ person.show.personPanelHeader                     = Infos
 person.show.resourcesPanelHeader                  = Resourcen
 person.show.role                                  = Rolle
 person.show.rolePubTab                            = Betreuung / Begutachtung
-person.show.saveButton                            = Aktualisieren
+person.show.saveButton                            = speichern
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
@@ -1436,7 +1436,7 @@ person.show.thesis                                = Abschlussarbeiten
 person.sidebar                                    = 
 person.sidebar.linkedUserClaimText                = Falls Sie diese Person sind, so k\u00F6nnen Sie diese Seite f\u00FCr sich beanspruchen und so mit Ihrem Account verbinden. Bitte beachten Sie, dass Sie nur eine Person beanspruchen k\u00F6nnen.
 person.sidebar.linkedUserClaimedText              = Diese Person wurde bereits einem User zugeordnet. 
-person.sidebar.linkedUserDefaultInfoText          = Das sind Sie? Loggen Sie sich ein, um diese Person Ihrem Account zuzuordnen.
+person.sidebar.linkedUserDefaultInfoText          = Das sind Sie? Melden Sie sich an, um diese Person Ihrem Account zuzuordnen.
 person.sidebar.linkedUserTitle                    = Person beanspruchen
 person.sidebar.linkedUserUnlinkText               = Falls Sie sich f\u00E4lschlicherweise diese Person zugeordnet haben, k\u00F6nnen Sie dies hiermit r\u00FCckg\u00E4ngig machen. Bitte beachten Sie, dass diese \u00C4nderung endg\u00FCltig ist. 
 
