Updated person link/unlink info messages

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1418,7 +1418,7 @@ person.show.modalDeleteNameHeader                 = Delete name from person
 person.show.modalDeleteRoleContent                = You really want to remove the following person role?
 person.show.modalDeleteRoleHeader                 = Remove person role from thesis
 person.show.modalEditRoleHeader                   = Edit roles of person
-person.show.modalLinkPersonContent                = You really want to link this person with your user account?
+person.show.modalLinkPersonContent                = Do you really want to link this person with your user account? Mind that any other connection to a person will be unlinked by that.
 person.show.modalLinkPersonHeader                 = Link person to user
 person.show.modalSetMainNameContent               = You really want to set the following name to be the main name?
 person.show.modalSetMainNameHeader                = Update the main name of the person
@@ -1451,7 +1451,7 @@ person.sidebar.linkedUserClaimText                = If you are this person you c
 person.sidebar.linkedUserClaimedText              = This person has been claimed by a user. 
 person.sidebar.linkedUserDefaultInfoText          = Is that you? Log-in to claim this person. 
 person.sidebar.linkedUserTitle                    = Claim this person
-person.sidebar.linkedUserUnlinkText               = If you accidentally claimed this person you can revert that. Please be careful, this change is permanent.
+person.sidebar.linkedUserUnlinkText               = If you accidentally claimed this person you can revert that.
 
 personalize = show personalized posts
 
