--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1405,7 +1405,7 @@ person.show.modalDeleteNameHeader                 = Namen zur Person entfernen
 person.show.modalDeleteRoleContent                = Wollen Sie die Personenzuordnung wirklich aufheben?
 person.show.modalDeleteRoleHeader                 = Personenrolle der Abschlussarbeit entfernen
 person.show.modalEditRoleHeader                   = Rollen der Person bearbeiten
-person.show.modalLinkPersonContent                = Wollen Sie Ihren Benutzer-Account mit dieser Person verkn\u00FCpfen?
+person.show.modalLinkPersonContent                = Wollen Sie Ihren Benutzer-Account mit dieser Person verkn\u00FCpfen? Achtung: Sollten sie bereits mit einer Person verkn\u00FCpft sein, wird diese Verkn\u00FCpfung gel\u00F6scht.
 person.show.modalLinkPersonHeader                 = Person mit Nutzer verkn\u00FCpfen
 person.show.modalSetMainNameContent               = Wollen sie den gew\u00E4hlten Namen wirklich zum Hauptnamen machen?
 person.show.modalSetMainNameHeader                = Hauptnamen der Person aktualisieren
@@ -1438,7 +1438,7 @@ person.sidebar.linkedUserClaimText                = Falls Sie diese Person sind,
 person.sidebar.linkedUserClaimedText              = Diese Person wurde bereits einem User zugeordnet. 
 person.sidebar.linkedUserDefaultInfoText          = Das sind Sie? Melden Sie sich an, um diese Person Ihrem Account zuzuordnen.
 person.sidebar.linkedUserTitle                    = Person beanspruchen
-person.sidebar.linkedUserUnlinkText               = Falls Sie sich f\u00E4lschlicherweise diese Person zugeordnet haben, k\u00F6nnen Sie dies hiermit r\u00FCckg\u00E4ngig machen. Bitte beachten Sie, dass diese \u00C4nderung endg\u00FCltig ist. 
+person.sidebar.linkedUserUnlinkText               = Falls Sie sich f\u00E4lschlicherweise diese Person zugeordnet haben, k\u00F6nnen Sie dies hiermit r\u00FCckg\u00E4ngig machen.
 
 personalize = Zeige personalisierte Eintr\u00E4ge 
 
