Added Placeholder messages for person page forms, Bugfix - accidentally renamed IDs

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1393,17 +1393,22 @@ person.show.addThesisButton                       = Add thesis
 person.show.advisor                               = Advisor
 person.show.authorOf                              = Author of
 person.show.close                                 = Close
+person.show.college                               = College
 person.show.created.createAndLinkPerson           = A new person has been created and assigned to the publication you have selected. Here, you can view or edit this person's details.  
 person.show.created.linkPerson                    = The publication has been associated to the person you have selected.
 person.show.deleteNameButton                      = Remove name
 person.show.deleteRoleButton                      = Delete role
 person.show.editRoleButton                        = Edit roles
+person.show.email                                 = e-mail
+person.show.email.placeholder                     = example@domain.com
 person.show.error.addRoleFailed                   = Adding the role has failed.
 person.show.error.alreadyAssigned                 = "{0}" of "{1}" has already been associated to the person "<a href="{2}">{3}</a>". Please check the associations. Maybe the same person is accounted several times in the system.
 person.show.firstReviewer                         = First reviewer
 person.show.formFirstName                         = First name
 person.show.formLastName                          = Last name
 person.show.header                                = person entry
+person.show.homepage                              = homepage
+person.show.homepage.placeholder                  = http://www.example.com
 person.show.modal.addRole.placeholder             = authorname or title
 person.show.modal.addSupervisedThesis.header      = add supervised thesis to person
 person.show.modal.addSupervisedThesis.placeholder = authorname or title
