--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1380,17 +1380,22 @@ person.show.addThesisButton                       = Abschlussarbeit hinzuf\u00FC
 person.show.advisor                               = Betreuer
 person.show.authorOf                              = Author von
 person.show.close                                 = Abbrechen
+person.show.college                               = Hochschule
 person.show.created.createAndLinkPerson           = Es wurde eine neue Person angelegt und mit der von Ihnen ausgew\u00E4hlten Person verkn\u00FCpft. Hier haben Sie die M\u00F6glichkeit, diese Person anzusehen und weitere Informationen \u00FCber die Person zu hinterlegen.
 person.show.created.linkPerson                    = Die Publikation wurde mit der ausgew\u00E4hlten Person verkn\u00FCpt.
 person.show.deleteNameButton                      = Namen entfernen
 person.show.deleteRoleButton                      = Aufheben
 person.show.editRoleButton                        = Rollen \u00E4ndern
+person.show.email                                 = E-Mail
+person.show.email.placeholder                     = example@domain.com
 person.show.error.addRoleFailed                   = Das Hinzuf\u00FCgen der Rolle ist fehlgeschlagen.
 person.show.error.alreadyAssigned                 = "{0}" der Arbeit "{1}" ist bereits der Person "<a href="{2}">{3}</a>" zugeordnet. Bitte \u00FCberpr\u00FCfen Sie die Zuordnung. Gegebenenfalls wird die selbe Person im System mehrfach gef\u00FChrt.
 person.show.firstReviewer                         = Erstgutachter
 person.show.formFirstName                         = Vorname
 person.show.formLastName                          = Nachname
 person.show.header                                = Personeneintrag
+person.show.homepage                              = Homepage
+person.show.homepage.placeholder                  = http://www.example.com
 person.show.modal.addRole.placeholder             = Autorname oder Titel
 person.show.modal.addSupervisedThesis.header      = betreute Abschlussarbeit hinzuf\u00FCgen
 person.show.modal.addSupervisedThesis.placeholder = Autorname oder Titel
