--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1286,6 +1286,11 @@ passwordreminder.username.help = \u0412\u0430\u0448\u0435 \u0438\u043C\u044F \u0
 
 person.index.searchInfo                  = \u0418\u0449\u0438\u0442\u0435 \u0434\u0438\u0441\u0441\u0435\u0440\u0442\u0430\u0446\u0438\u044E \u043A\u043E\u043C\u0431\u0438\u043D\u0430\u0446\u0438\u0435\u0439 \u0430\u0432\u0442\u043E\u0440\u0430 (\u0438\u043C\u044F / \u0444\u0430\u043C\u0438\u043B\u0438\u044F), \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0440\u0430\u0431\u043E\u0442\u044B, \u0443\u043D\u0438\u0432\u0435\u0440\u0441\u0438\u0442\u0435\u0442\u0430 \u0438 \u0433\u043E\u0434
 person.show.TooltipLockedForm            = 
+person.show.college                      = 
+person.show.email                        = e-mail
+person.show.email.placeholder            = example@domain.com
+person.show.homepage                     = \u0434\u043E\u043C\u0430\u0448\u043D\u044F\u044F \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0430
+person.show.homepage.placeholder         = http://www.example.com
 person.sidebar                           = 
 person.sidebar.linkedUserClaimText       = 
 person.sidebar.linkedUserClaimedText     = 
