updated ACSScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest.bib
@@ -1,10 +1,5 @@
-
-
-
-
-
 @article{doi:10.1021/ci049894n,
-author = {Tetsuo Morikawa,*,† and Susumu Narita,‡ and and Douglas J. Klein§},
+author = {Morikawa, Tetsuo and Narita, Susumu and Klein, Douglas J.},
 title = {Molecules-in-Molecule Estimation of the Extent of Localization of Kekuléan Substructures in Polycyclic Aromatic Hydrocarbons},
 journal = {Journal of Chemical Information and Computer Sciences},
 volume = {44},
@@ -22,5 +17,3 @@ eprint = {
 ,
     abstract = { This article first revises graph-theoretical (local aromaticity and overall molecular) indices, introduced by M. Randić in 1975, for benzenoid hydrocarbons and somewhat improves them for computer enumeration. This goes beyond total Kekulé structure enumeration, yielding an index calculation useful for the quantitative estimation of localization of different Kekuléan substructures (including ethylene-, benzene-, annulene-, and radialene-units). This may be viewed as a “molecules-in molecule” approach to polycyclic aromatic hydrocarbons within the context of graph theoretical partitioning. }
 }
-
-
