--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ACSScraperUnitURLTest3.bib
@@ -1,10 +1,5 @@
-
-
-
-
-
 @article{doi:10.1021/nn103618d,
-author = {Minrui Yu and Yu Huang and Jason Ballweg and Hyuncheol Shin and Minghuang Huang and Donald E. Savage and Max G. Lagally and Erik W. Dent and Robert H. Blick and Justin C. Williams},
+author = {Yu, Minrui and Huang, Yu and Ballweg, Jason and Shin, Hyuncheol and Huang, Minghuang and Savage, Donald E. and Lagally, Max G. and Dent, Erik W. and Blick, Robert H. and Williams, Justin C.},
 title = {Semiconductor Nanomembrane Tubes: Three-Dimensional Confinement for Controlled Neurite Outgrowth},
 journal = {ACS Nano},
 volume = {5},
@@ -22,5 +17,3 @@ eprint = {
 ,
     abstract = { In many neural culture studies, neurite migration on a flat, open surface does not reflect the three-dimensional (3D) microenvironment in vivo. With that in mind, we fabricated arrays of semiconductor tubes using strained silicon (Si) and germanium (Ge) nanomembranes and employed them as a cell culture substrate for primary cortical neurons. Our experiments show that the SiGe substrate and the tube fabrication process are biologically viable for neuron cells. We also observe that neurons are attracted by the tube topography, even in the absence of adhesion factors, and can be guided to pass through the tubes during outgrowth. Coupled with selective seeding of individual neurons close to the tube opening, growth within a tube can be limited to a single axon. Furthermore, the tube feature resembles the natural myelin, both physically and electrically, and it is possible to control the tube diameter to be close to that of an axon, providing a confined 3D contact with the axon membrane and potentially insulating it from the extracellular solution. }
 }
-
-
