updated HTMLMetaDataDublinCoreToBibtexConverter and DCScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest.bib
@@ -1,10 +1,10 @@
 @misc{hauckumgang,
-abstract = {Im Kontext des Projekts „Entwicklung eines institutionellen Konzepts zum Forschungsdatenmanagement an der Leibniz Universität Hannover“ wurden 2015/16 eine universitätsinterne Online-Umfrage und ergänzende Interviews durchgeführt. Deren Ergebnisse ermöglichen einen Einblick in den derzeitigen Umgang mit Forschungsdaten und eine Abschätzung des Bedarfs an Beratung, Schulung und technischer Infrastruktur seitens des wissenschaftlichen Personals. In diesem Bericht werden die Daten präsentiert und ausgewertet.},
-id = {http://www.repo.uni-hannover.de/handle/123456789/287, http://dx.doi.org/10.15488/265},
-author = {Hauck, Reingis and Kaps, Reiko and Krojanski, Hans Georg and Meyer, Anneke and Neumann, Janna and Soßna, Volker},
-title = {Der Umgang mit Forschungsdaten an der Leibniz Universität Hannover. Auswertung einer Umfrage und ergänzender Interviews 2015/16},
 editor = {Leibniz Universität Hannover and Technische Informationsbibliothek (TIB)},
-type = {report, Text, publishedVersion},
-publisher = {Hannover : Institutionelles Repositorium der Leibniz Universität Hannover}
+author = {Hauck, Reingis and Kaps, Reiko and Krojanski, Hans Georg and Meyer, Anneke and Neumann, Janna and Soßna, Volker},
+publisher = {Hannover : Institutionelles Repositorium der Leibniz Universität Hannover},
+id = {http://www.repo.uni-hannover.de/handle/123456789/287, http://dx.doi.org/10.15488/265},
+abstract = {Im Kontext des Projekts „Entwicklung eines institutionellen Konzepts zum Forschungsdatenmanagement an der Leibniz Universität Hannover“ wurden 2015/16 eine universitätsinterne Online-Umfrage und ergänzende Interviews durchgeführt. Deren Ergebnisse ermöglichen einen Einblick in den derzeitigen Umgang mit Forschungsdaten und eine Abschätzung des Bedarfs an Beratung, Schulung und technischer Infrastruktur seitens des wissenschaftlichen Personals. In diesem Bericht werden die Daten präsentiert und ausgewertet.},
+title = {Der Umgang mit Forschungsdaten an der Leibniz Universität Hannover. Auswertung einer Umfrage und ergänzender Interviews 2015/16},
+type = {report, Text, publishedVersion}
 ,url = {http://www.repo.uni-hannover.de/handle/123456789/287}
 }
