--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest2.bib
@@ -1,12 +1,12 @@
 @article{shuge2009essential,
 ISSN = {09748490},
-id = {http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6, 0974-8490},
-abstract = {The essential oil of Dracocephalum moldavica L from Xinjiang in China was isolated by hydrodistillation in yield of 0.15 %(w/w). The chemical composition of the essential oil was analyzed by GC and GCMS. Fifty-one compounds accounting for 99.45% of the total oil were identified. The major components werea-Citral (32.55%), &#946;-Citral (23.53%), Acetic acid, geranial ester(21.32%), Trans-Geraniol(3.38%), Nerolacetate(3.38%), Octane(2.14%), and 2,4,6-Trimethyl -3-cyclohexene-1-carboxaldehyde (1.3%). Monotenepers were the main group of compounds.},
-author = {Shuge},
 editor = {Shuge T, Xiaoying Z, Fan Z, Dongqing A, Tao Y},
-title = {Essential Oil Composition of the <i>Dracocephalum moldavica </i>L from Xinjiang in China},
 year = {2009},
-type = {Text.Serial.Journal},
-publisher = {Medknow Publications and Media Pvt. Ltd.}
+author = {Shuge},
+publisher = {Medknow Publications and Media Pvt. Ltd.},
+abstract = {The essential oil of Dracocephalum moldavica L from Xinjiang in China was isolated by hydrodistillation in yield of 0.15 %(w/w). The chemical composition of the essential oil was analyzed by GC and GCMS. Fifty-one compounds accounting for 99.45% of the total oil were identified. The major components werea-Citral (32.55%), &#946;-Citral (23.53%), Acetic acid, geranial ester(21.32%), Trans-Geraniol(3.38%), Nerolacetate(3.38%), Octane(2.14%), and 2,4,6-Trimethyl -3-cyclohexene-1-carboxaldehyde (1.3%). Monotenepers were the main group of compounds.},
+id = {http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6, 0974-8490},
+title = {Essential Oil Composition of the <i>Dracocephalum moldavica </i>L from Xinjiang in China},
+type = {Text.Serial.Journal}
 ,url = {http://www.phcogres.com/article.asp?issn=0974-8490;year=2009;volume=1;issue=4;spage=172;epage=174;aulast=Shuge;t=6}
 }
