--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/DCScraperTest4.bib
@@ -1,10 +1,11 @@
 @misc{koitmae2013direct,
-id = {doi:10.4236/snl.2013.34014},
-abstract = {We introduce a direct method for transferring arrays of GaAs microtubes from an opaque substrate to a transparent glass substrate in a controlled manner. This enables us to build a platform for optical readout of the microtubes’ interaction with overgrown cellular networks. We achieve this by applying a double layer of polydimethylsiloxane (PDMS). The first PDMS layer serves as a smooth and mechanically compliant transparent substrate. The second, adhesive layer contains a mixture of PDMS and n-hexane, which creates a layer thickness smaller than the tube diameter. This will prevent the tubes from sinking into the substrate. The microtubes themselves are made of GaAs heterostructures. The direct bandgap of the material allows for the integration of embedded optical device components into the tube wall. The microtubes have diameters on the same scale as typical mouse cortical axons, being on average 1 μm. The axons can be grown through the tubes, hence maximally enhancing the capacitive coupling of the signal source (axon) and the electrode (tube). Although the tube material is toxic to cells, we are able to overcome this by a parylene-coating step.},
-author = {Aune Koitmäe and Cornelius S. Bausch and Eric Stava and David Sonnenberg and Wolfgang Hansen and Robert Blick},
-title = {Direct Transfer of GaAs Microtube Arrays onto Transparent Substrates for Imaging Neuron Outgrowth},
 year = {2013},
-type = {Articles},
-publisher = {Scientific Research Publishing}
+author = {Aune Koitmäe and Cornelius S. Bausch and Eric Stava and David Sonnenberg and Wolfgang Hansen and Robert Blick},
+publisher = {Scientific Research Publishing},
+abstract = {We introduce a direct method for transferring arrays of GaAs microtubes from an opaque substrate to a transparent glass substrate in a controlled manner. This enables us to build a platform for optical readout of the microtubes’ interaction with overgrown cellular networks. We achieve this by applying a double layer of polydimethylsiloxane (PDMS). The first PDMS layer serves as a smooth and mechanically compliant transparent substrate. The second, adhesive layer contains a mixture of PDMS and n-hexane, which creates a layer thickness smaller than the tube diameter. This will prevent the tubes from sinking into the substrate. The microtubes themselves are made of GaAs heterostructures. The direct bandgap of the material allows for the integration of embedded optical device components into the tube wall. The microtubes have diameters on the same scale as typical mouse cortical axons, being on average 1 μm. The axons can be grown through the tubes, hence maximally enhancing the capacitive coupling of the signal source (axon) and the electrode (tube). Although the tube material is toxic to cells, we are able to overcome this by a parylene-coating step.},
+source = {Soft Nanoscience Letters},
+id = {doi:10.4236/snl.2013.34014},
+title = {Direct Transfer of GaAs Microtube Arrays onto Transparent Substrates for Imaging Neuron Outgrowth},
+type = {Articles}
 ,url = {http://www.scirp.org/journal/PaperInformation.aspx?PaperID=37807}
 }
