updated ProlaScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest4.bib
@@ -10,5 +10,5 @@
   month = {Sep},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.149.674},
-  url = {http://link.aps.org/doi/10.1103/PhysRev.149.674}
+  url = {https://link.aps.org/doi/10.1103/PhysRev.149.674}
 }
