--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest1.bib
@@ -10,5 +10,5 @@
   month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevA.1.1},
-  url = {http://link.aps.org/doi/10.1103/PhysRevA.1.1}
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.1.1}
 }
