--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest3.bib
@@ -1,5 +1,5 @@
 @article{PhysRevB.47.558,
-  title = {\textit{Ab initio}   molecular dynamics for liquid metals},
+  title = {Ab initio},
   author = {Kresse, G. and Hafner, J.},
   journal = {Phys. Rev. B},
   volume = {47},
@@ -10,5 +10,5 @@
   month = {Jan},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevB.47.558},
-  url = {http://link.aps.org/doi/10.1103/PhysRevB.47.558}
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.47.558}
 }
