--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ProlaScraperUnitURLTest5.bib
@@ -10,5 +10,5 @@
   month = {Jun},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevE.64.016131},
-  url = {http://link.aps.org/doi/10.1103/PhysRevE.64.016131}
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.64.016131}
 }
