Added a link to the person page on the settings page of a user, if he has claimed a person
- added getPersonByUser method to the logic interface
- added getPersonByUser to the ReadOnlyLogic and DBLogic
- added claimedUser to the settingsPageCommand
- added claimedUser t the updated SettingsPageController
- added sidebar message to the message properties

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -2323,6 +2323,7 @@ settings.russian                                            = Russian
 settings.saveChanges                                        = save changes
 settings.setlayout                                          = set layout
 settings.shareddocuments                                    = shared documents
+settings.sidebar.claimedPerson                              = Your person page
 settings.simple                                             = simple
 settings.status                                             = state message
 #settings page
