--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2310,6 +2310,7 @@ settings.russian                                            = Russisch
 settings.saveChanges                                        = \u00C4nderungen speichern
 settings.setlayout                                          = Layout speichern
 settings.shareddocuments                                    = freigegebene Dokumente
+settings.sidebar.claimedPerson                              = Ihre Personenseite
 settings.simple                                             = Einfach
 settings.status                                             = Statusnachricht
 #settings page
