--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -2081,6 +2081,7 @@ settings.resource.resourceToShow.help                       = \u0432\u044B\u0431
 settings.saveChanges                                        = \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 settings.setlayout                                          = \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043B\u0435\u0439\u0430\u0443\u0442
 settings.shareddocuments                                    = \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u0434\u043B\u044F \u043E\u0431\u0449\u0435\u0433\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u043D\u0438\u044F
+settings.sidebar.claimedPerson                              = 
 settings.simple                                             = \u043F\u0440\u043E\u0441\u0442\u043E\u0439
 settings.status                                             = \u0423\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0435 \u043E \u0441\u0442\u0430\u0442\u0443\u0441\u0435
 #settings page
