--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/FRONTIERSINScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/FRONTIERSINScraperUnitURLTest1.bib
@@ -1,21 +1,24 @@
 @ARTICLE{10.3389/fphys.2016.00071,
   
- AUTHOR={Düking, Peter  and  Hotho, Andreas  and  Fuss, Franz Konstantin  and  Holmberg, Hans-Christer  and  Sperlich, Billy},   
+AUTHOR={Düking, Peter and Hotho, Andreas and Holmberg, Hans-Christer and Fuss, Franz Konstantin and Sperlich, Billy},   
 	 
-TITLE={Comparison of non-invasive individual monitoring of the training and health of athletes with commercially available wearable technologies},      
+TITLE={Comparison of Non-Invasive Individual Monitoring of the Training and Health of Athletes with Commercially Available Wearable Technologies},      
 	
 JOURNAL={Frontiers in Physiology},      
 	
 VOLUME={7},      
+
+PAGES={71},     
 	
 YEAR={2016},      
-	
-NUMBER={71},     
 	  
-URL={http://www.frontiersin.org/exercise_physiology/10.3389/fphys.2016.00071/abstract},       
+URL={http://journal.frontiersin.org/article/10.3389/fphys.2016.00071},       
 	
 DOI={10.3389/fphys.2016.00071},      
 	
-ISSN={1664-042X} ,      
-	
-ABSTRACT={Athletes adapt their training daily to optimize performance, as well as avoid fatigue, overtraining and other undesirable effects on their health. To optimize training load, each athlete must take his/her own personal objective and subjective characteristics into consideration and an increasing number of wearable technologies (wearables) provide convenient monitoring of various parameters. Accordingly, it is important to help athletes decide which parameters are of primary interest and which wearables can monitor these parameters most effectively. Here, we discuss the wearable technologies available for non-invasive monitoring of various parameters concerning an athlete's training and health. On the basis of these considerations, we suggest directions for future development. Furthermore, we propose that a combination of several wearables is most effective for accessing all relevant parameters, disturbing the athlete as little as possible, and optimizing performance and promoting health.}}
+ISSN={1664-042X},   
+   
+ABSTRACT={Athletes adapt their training daily to optimize performance, as well as avoid fatigue, overtraining and other undesirable effects on their health. To optimize training load, each athlete must take his/her own personal objective and subjective characteristics into consideration and an increasing number of wearable technologies (wearables) provide convenient monitoring of various parameters. Accordingly, it is important to help athletes decide which parameters are of primary interest and which wearables can monitor these parameters most effectively. 
+
+Here, we discuss the wearable technologies available for non-invasive monitoring of various parameters concerning an athlete’s training and health. On the basis of these considerations, we suggest directions for future development. Furthermore, we propose that a combination of several wearables is most effective for accessing all relevant parameters, disturbing the athlete as little as possible, and optimizing performance and promoting health.}
+}
