updated IucrScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/iucr/IucrScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/iucr/IucrScraperUnitURLTest2.bib
@@ -8,7 +8,7 @@ number = "2",
 pages = "316--323",
 month = "Apr",
 doi = {10.1107/S0021889812006462},
-url = {http://dx.doi.org/10.1107/S0021889812006462},
+url = {https://doi.org/10.1107/S0021889812006462},
 abstract = {{\it CrystalEye} automatically aggregates crystallographic data from web resources (the supplementary data to articles on publishers' web sites) into a structured XML-based repository, and then adds value to that open data by providing methods to easily browse, search and to keep up-to-date with the latest published information.},
 keywords = {CIF, XML, CML, CrystalEye, computer programs},
 }
