updated PubMedScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PubMedScraperUnitURLTest4.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/PubMedScraperUnitURLTest4.bib
@@ -7,7 +7,7 @@ year = "2009",
 volume = "10 Suppl 5",
 number = "",
 pages = "",
-month = "",
+month = "May",
 pmid = "19426458",
 url = "http://ukpmc.ac.uk/abstract/MED/19426458",
 doi = "10.1186/1471-2105-10-S5-S1"
