updated JCIScraper test files

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JCIScraperUnitTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JCIScraperUnitTest.bib
@@ -11,5 +11,5 @@ pages = {370-378},
 abstract = {Mutations in the lamin A/C gene (LMNA) cause a variety of human diseases including Emery-Dreifuss muscular dystrophy, dilated cardiomyopathy, and Hutchinson-Gilford progeria syndrome. The tissue-specific effects of lamin mutations are unclear, in part because the function of lamin A/C is incompletely defined, but the many muscle-specific phenotypes suggest that defective lamin A/C could increase cellular mechanical sensitivity. To investigate the role of lamin A/C in mechanotransduction, we subjected lamin A/C–deficient mouse embryo fibroblasts to mechanical strain and measured nuclear mechanical properties and strain-induced signaling. We found that Lmna–/– cells have increased nuclear deformation, defective mechanotransduction, and impaired viability under mechanical strain. NF-κB–regulated transcription in response to mechanical or cytokine stimulation was attenuated in Lmna–/– cells despite increased transcription factor binding. Lamin A/C deficiency is thus associated with both defective nuclear mechanics and impaired mechanically activated gene transcription. These findings suggest that the tissue-specific effects of lamin A/C mutations observed in the laminopathies may arise from varying degrees of impaired nuclear mechanics and transcriptional activation.},
 number = {3},
 doi = {10.1172/JCI19670},
-url = {http://dx.doi.org/10.1172/JCI19670},
+url = {https://doi.org/10.1172/JCI19670},
 }
