--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ContentNegotiationDOIScraper1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/ContentNegotiationDOIScraper1.bib
@@ -1,6 +1,6 @@
 @article{Wakeling_2012,
 	doi = {10.1108/07378831211213265},
-	url = {http://dx.doi.org/10.1108/07378831211213265},
+	url = {https://doi.org/10.1108%2F07378831211213265},
 	year = 2012,
 	month = {mar},
 	publisher = {Emerald},
@@ -8,6 +8,6 @@
 	number = {1},
 	pages = {134--150},
 	author = {Simon Wakeling and Paul Clough and Barbara Sen and Lynn Silipigni Connaway},
-	title = {{\textquotedblleft}Readers who borrowed this also borrowed {\ldots} {\textquotedblright}: recommender systems in {UK} libraries},
+	title = {{\textquotedblleft}Readers who borrowed this also borrowed{\hspace{0.167em}}{\ldots}{\hspace{0.167em}}{\textquotedblright}: recommender systems in {UK} libraries},
 	journal = {Library Hi Tech}
 }
