--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStageScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/JStageScraperUnitURLTest2.bib
@@ -8,4 +8,5 @@
   year={2014},
   doi={10.7880/abas.13.67}
 ,url = {https://www.jstage.jst.go.jp/article/abas/13/2/13_67/_article}
+,abstract = {The present paper identifies leaps in the logic of Granovetter&apos;s (1973) “The Strength of Weak Ties.” Granovetter states that “bridges” are “weak ties” due to the existence of a “forbidden triad.” However, the latter portion of his work, which cites empirical evidence, indicates a reversal in the logical relationship, stating that “weak ties” are “bridges.” Granovetter also provides very little evidence to state definitively that “forbidden triads never happen.”}
 }
